Story #14670, #14672, #14673, #14599, #14855 :  ingest SIP on collect